prepare ui to register trees including diamter, birth and register date

--- a/data/firebasedb.json
+++ b/data/firebasedb.json
@@ -52,7 +52,8 @@
       "tree1": {
         "speciesId": "species1",
         "code": "TJB001",
-        "dateBirth": "2024-07-01",
+        "dateBirth": "2019-07-01",
+        "registerDate": "2024-11-01",
         "diameter": 60.38,
         "deleteDate": "2025-02-15",
         "latitude": -17.333343,
@@ -65,6 +66,7 @@
         "speciesId": "species2",
         "code": "TPN002",
         "dateBirth": "2024-11-01",
+        "registerDate": "2024-11-01",
         "diameter": 78.56,
         "deleteDate": "2025-06-28",
         "latitude": -17.330163,
@@ -76,7 +78,8 @@
       "tree3": {
         "speciesId": "species3",
         "code": "PCY003",
-        "dateBirth": "2025-05-01",
+        "dateBirth": "2021-05-01",
+        "registerDate": "2024-01-11",
         "diameter": 33.17,
         "deleteDate": "2024-02-26",
         "latitude": -17.331136,
@@ -89,6 +92,7 @@
         "speciesId": "species4",
         "code": "JCR004",
         "dateBirth": "2022-10-01",
+        "registerDate": "2023-11-01",
         "diameter": 88.02,
         "deleteDate": "2025-06-16",
         "latitude": -17.328928,
@@ -101,6 +105,7 @@
         "speciesId": "species5",
         "code": "ALM005",
         "dateBirth": "2024-09-01",
+        "registerDate": "2024-11-01",
         "diameter": 57.81,
         "deleteDate": "2024-08-13",
         "latitude": -17.328687, 
