add univalle project firebase

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "treemap-de6cf"
-  }
+    "default": "treemap-de6cf",
+    "univalle": "treemap-de6cf"
+  },
+  "targets": {},
+  "etags": {}
 }
