--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "browser-image-compression": "^2.0.2",
+    "dotenv": "^16.4.5",
     "firebase": "^10.14.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
